--- a/server-one/package.json
+++ b/server-one/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "server-one",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "express": "^4.18.2"
   }
 }
